# emulator-assembler

./: CMakeLists.txt  Doxyfile  Makefile  README.md
assembler/: asm4380.py
assemblyPrograms/mine/: ProgA.asm  ProgB.asm  ProgC.asm  ProgD.asm  test.asm
docs/: instructiontable.md
include/: arith.h  emu4380.h  interrupt.h  jump.h  move.h  opcode.h  utils.h
src/: arith.cpp  emu4380.cpp  interrupt.cpp  jump.cpp  main.cpp  move.cpp
test/: test.cpp  test_assembler.py
test/assemblerTest/: example-2-1.asm  example.asm  prog_a.asm  prog_b.asm  prog_c.asm  prog_d.asm  prog_e.asm  prog_f.asm
test/testFiles/: testfile1.txt
test/testFiles/failtestoutput/: failedSubmission1.txt
tools/: makebinary.cpp
